# subway_flooding_event_catalog_pipeline

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
data/: LICENSE-DATA.md
examples/ida_2021/: run_collect.py  run_demo.py
examples/ida_2021/social/: gdelt.json  news_rss.xml  weibo.json  x.json
examples/ida_2021/sources/: ida_s2_scene.json  mta_ida_report.txt
schema/: ontology.md
src/flood_catalog/: __init__.py  catalog.py  models.py
src/flood_catalog/collect/: __init__.py  __main__.py  _http.py  base.py  cli.py  gdelt.py  normalize.py  pipeline.py  rss.py  social.py
src/flood_catalog/extract/: __init__.py  base.py  geoutil.py  image.py  imageutil.py  llm.py  parse.py  satellite.py  text.py
src/flood_catalog/ingest/: __init__.py  router.py
src/flood_catalog/site/: __init__.py  build.py
src/flood_catalog/store/: __init__.py  blobs.py  graph.py  stac.py  tables.py
tests/: test_collect.py  test_pipeline.py  test_real_extraction.py  test_satellite_stac.py
