[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-catalog"
version = "0.1.0"
description = "Multi-modal, provenance-first pipeline for an open subway flooding event catalog"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "duckdb>=1.0",
]

[project.optional-dependencies]
# Real model + parsing backends (the stub demo needs none of these).
extract = ["anthropic>=0.40", "docling", "pillow"]   # Claude (text+vision) + PDF parsing + image dims
graph = ["kuzu"]                                  # embedded property graph
geo = ["rasterio", "shapely", "pyproj", "numpy", "pystac"]  # satellite flood extent + STAC
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
